Added theme selector

--- a/weekone/mission/styles.css
+++ b/weekone/mission/styles.css
@@ -57,4 +57,14 @@ body {
     width: 150px;
     height: auto;
   }
+
+  body.dark {
+    background-color: #333;
+    color: white;
+  }
+  
+  body.dark h2 {
+    color: #66ccff; 
+  }
+  
   
